# DeskSandGlass

Hardware/DeskSandGlass/: DeskSandGlass.kicad_pcb  DeskSandGlass.kicad_prl  DeskSandGlass.kicad_pro  DeskSandGlass.kicad_sch  audio_schematic.kicad_sch  fp-info-cache  l6924dv_battery_default.kicad_sch  leds.kicad_sch  lis3dh_default_schematic.kicad_sch  nrf52811_default_schematic.kicad_sch  nrf52833_schematic.kicad_sch  nrf52840_module.kicad_sch  rp2040_default_schematic.kicad_sch  sd_card_default.kicad_sch  tps54311_default_schematic.kicad_sch
Hardware/DeskSandGlass/3DModels/: CMA-4544PF-W.step
Hardware/DeskSandGlass/Footprints/: PW24_TEX.kicad_mod
Hardware/DeskSandGlass/Gerber/: DeskSandGlass-B_Cu.gbr  DeskSandGlass-B_Mask.gbr  DeskSandGlass-B_Paste.gbr  DeskSandGlass-B_Silkscreen.gbr  DeskSandGlass-Edge_Cuts.gbr  DeskSandGlass-F_Cu.gbr  DeskSandGlass-F_Mask.gbr  DeskSandGlass-F_Paste.gbr  DeskSandGlass-F_Silkscreen.gbr  DeskSandGlass-NPTH-drl_map.gbr  DeskSandGlass-NPTH.drl  DeskSandGlass-PTH-drl_map.gbr  DeskSandGlass-PTH.drl  DeskSandGlass-job.gbrjob
Hardware/DeskSandGlass/Symbol/: CMA-4544PF-W.kicad_sym  NAU88C22.kicad_sym
Software/DeskSandGlassPico/: CMakeLists.txt  main.c  main.h
